--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://devwenderson.github.io/site-icafrn",
+  "homepage": "https://icafrn.github.io/icafrn-site",
   "name": "icaf-site",
   "private": true,
   "version": "0.0.0",
