--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,12 @@ jobs:
         with: 
           node-version: 20.17.0
 
+      # User login
+      - name: Set up Git user
+        run: |
+          git config --global user.name "icafrn"
+          git config --global user.email "meuicafrn@gmail.com"
+          
       # Node.js install dependencies
       - name: Install dependencies
         run: npm install
