--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
       # Code checkout 
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false  # Evita conflitos com credenciais padrão do GitHub Actions
 
       # Node.js config
       - name: Set up Node.js
@@ -28,7 +30,7 @@ jobs:
         run: |
           git config --global user.name "icafrn"
           git config --global user.email "meuicafrn@gmail.com"
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/icafrn/icafrn-site.git
+          git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/icafrn/icafrn-site.git
           
       # Node.js install dependencies
       - name: Install dependencies
