--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,6 @@ jobs:
       # Code checkout 
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          persist-credentials: false  # Evita conflitos com credenciais padrão do GitHub Actions
 
       # Node.js config
       - name: Set up Node.js
@@ -30,7 +28,6 @@ jobs:
         run: |
           git config --global user.name "icafrn"
           git config --global user.email "meuicafrn@gmail.com"
-          git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/icafrn/icafrn-site.git
           
       # Node.js install dependencies
       - name: Install dependencies
@@ -38,4 +35,5 @@ jobs:
 
       # Execute deploy script
       - name: Run deploy script
-        run: npm run deploy
+        run: |
+          npx gh-pages -d build --repo https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/icafrn/icafrn-site.git
