--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Run predeploy script
+        run: npm run build
+      
       # Execute deploy script
       - name: Run deploy script
         run: |
