--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run predeploy script
-        run: npm run build
       
       # Execute deploy script
       - name: Run deploy script
         run: |
-          npx gh-pages -d build --repo https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/icafrn/icafrn-site.git
+          npx gh-pages -d dist --repo https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/icafrn/icafrn-site.git
