--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,4 @@ jobs:
       # Execute deploy script
       - name: Run deploy script
         run: |
-          npx gh-pages -d dist --repo https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/icafrn/icafrn-site.git
+          npx gh-pages -d dist --repo https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/icafrn/icafrn-site.git
