--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       # User login
       - name: Set up Git user
         run: |
-          git config --global user.name "icafrn"
+          git config --global user.name "${GITHUB_ACTOR}"
           git config --global user.email "meuicafrn@gmail.com"
           
       # Node.js install dependencies
