--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,13 +2,13 @@ name: Deploy to GitHub Pages
 
 on: 
   pull_request:
-    branches: [ "main" ]
+    branches: [ "deploy-to-gh-pages" ]
 
 permissions:
   contents: read  
   pages: write      
   id-token: write   
-  
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
